--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -21,7 +21,7 @@
         android:id="@+id/loginButton"
         android:layout_width="401dp"
         android:layout_height="wrap_content"
-        android:text="Show Log in"
+        android:text="Log in"
         android:textAlignment="center"
         tools:layout_conversion_absoluteHeight="48dp"
         tools:layout_conversion_absoluteWidth="113dp"
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Not logged in"
+        android:text=""
         android:textAlignment="center"
         android:textSize="21sp"
         tools:layout_conversion_absoluteHeight="515dp"
