--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -14,7 +14,7 @@
         android:layout_height="38dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="92dp"
-        android:text="@string/welcome"
+        android:text="Hello World"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@android:color/black"
