--- a/app/src/main/res/layout/register_user.xml
+++ b/app/src/main/res/layout/register_user.xml
@@ -5,41 +5,57 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/format"
+        android:layout_width="408dp"
+        android:layout_height="790dp"
+        android:visibility="visible"
+        android:contentDescription="@string/Register"
+        android:src="@drawable/dashboard_format"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/dashboard_format" />
     <TextView
         android:id="@+id/Phone"
         android:layout_width="378dp"
-        android:layout_height="38dp"
+        android:layout_height="30dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:text="@string/Phone"
-        android:textColor="@color/black"
+        android:textColor="@color/lightblue"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editEmail" />
 
     <TextView
         android:id="@+id/hello"
-        android:layout_width="403dp"
+        android:layout_width="377dp"
         android:layout_height="52dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
         android:text="@string/Registration"
-        android:textColor="@color/black"
+        android:textAlignment="textStart"
+        android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editFirstName"
         android:layout_width="378dp"
-        android:layout_height="49dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/border"
         android:hint="@string/FirstName"
         android:inputType="textPersonName"
         android:visibility="visible"
@@ -51,10 +67,10 @@
     <EditText
         android:id="@+id/editEmail"
         android:layout_width="378dp"
-        android:layout_height="49dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/border"
         android:inputType="textEmailAddress"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,10 +81,11 @@
     <EditText
         android:id="@+id/editLastName"
         android:layout_width="378dp"
-        android:layout_height="49dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/border"
         android:hint="@string/LastName"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,28 +96,31 @@
     <EditText
         android:id="@+id/editPhone"
         android:layout_width="378dp"
-        android:layout_height="49dp"
+        android:layout_height="37dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/border"
         android:hint="@string/PhoneHint"
         android:inputType="phone"
         app:layout_constraintBottom_toTopOf="@+id/Year"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Phone" />
+        app:layout_constraintTop_toBottomOf="@+id/Phone"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/register"
-        android:layout_width="wrap_content"
+        android:layout_width="145dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/roundedbutton"
         android:text="@string/Register"
-        android:textColor="@color/blue"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -108,27 +128,27 @@
     <TextView
         android:id="@+id/firstName"
         android:layout_width="137dp"
-        android:layout_height="38dp"
+        android:layout_height="30dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="8dp"
         android:text="@string/FirstName"
-        android:textColor="@color/black"
+        android:textColor="@color/lightblue"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.034"
+        app:layout_constraintHorizontal_bias="0.031"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hello" />
 
     <TextView
         android:id="@+id/Year"
         android:layout_width="137dp"
-        android:layout_height="38dp"
+        android:layout_height="30dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/Year"
-        android:textColor="@color/black"
+        android:textColor="@color/lightblue"
         android:textSize="26sp"
         app:layout_constraintBottom_toTopOf="@+id/yearPicker"
         app:layout_constraintEnd_toEndOf="parent"
@@ -138,12 +158,12 @@
     <TextView
         android:id="@+id/Email"
         android:layout_width="137dp"
-        android:layout_height="38dp"
+        android:layout_height="30dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="@string/Email"
-        android:textColor="@color/black"
+        android:textColor="@color/lightblue"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.031"
@@ -153,24 +173,24 @@
     <TextView
         android:id="@+id/lastName"
         android:layout_width="137dp"
-        android:layout_height="38dp"
+        android:layout_height="30dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/LastName"
-        android:textColor="@color/black"
+        android:textColor="@color/lightblue"
         android:textSize="26sp"
         app:layout_constraintBottom_toTopOf="@+id/editLastName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.034"
+        app:layout_constraintHorizontal_bias="0.031"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editFirstName"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <NumberPicker
         android:id="@+id/yearPicker"
-        android:layout_width="wrap_content"
+        android:layout_width="369dp"
         android:layout_height="76dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
