Beginning of Organization View Page

--- a/app/src/main/res/layout/register_user.xml
+++ b/app/src/main/res/layout/register_user.xml
@@ -17,6 +17,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/dashboard_format" />
+
     <TextView
         android:id="@+id/Phone"
         android:layout_width="378dp"
@@ -24,9 +25,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/roboto_condensed_regular"
         android:text="@string/Phone"
         android:textColor="@color/lightblue"
         android:textSize="26sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +42,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/roboto_condensed_regular"
         android:text="@string/Registration"
         android:textAlignment="textStart"
         android:textColor="@color/white"
@@ -119,8 +123,12 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/roundedbutton"
+        android:fontFamily="@font/roboto_condensed_regular"
         android:text="@string/Register"
+        android:textAllCaps="false"
         android:textColor="@color/white"
+        android:textSize="25sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -132,9 +140,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/roboto_condensed_regular"
         android:text="@string/FirstName"
         android:textColor="@color/lightblue"
         android:textSize="26sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.031"
         app:layout_constraintStart_toStartOf="parent"
@@ -147,9 +157,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="20dp"
+        android:fontFamily="@font/roboto_condensed_regular"
         android:text="@string/Year"
         android:textColor="@color/lightblue"
         android:textSize="26sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/yearPicker"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.034"
@@ -162,9 +174,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/roboto_condensed_regular"
         android:text="@string/Email"
         android:textColor="@color/lightblue"
         android:textSize="26sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.031"
         app:layout_constraintStart_toStartOf="parent"
@@ -178,9 +192,11 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/roboto_condensed_regular"
         android:text="@string/LastName"
         android:textColor="@color/lightblue"
         android:textSize="26sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/editLastName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.031"
@@ -195,6 +211,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/roboto_condensed_regular"
+        android:textSize="26sp"
         app:layout_constraintBottom_toTopOf="@+id/register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
