--- a/app/src/main/res/layout/qr_scanner.xml
+++ b/app/src/main/res/layout/qr_scanner.xml
@@ -27,9 +27,11 @@
         android:layout_height="51dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="44dp"
+        android:fontFamily="@font/roboto_condensed_regular"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,12 +58,12 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:baselineAligned="false"
+        android:fontFamily="@font/roboto_condensed_light_italic"
         android:text="@string/qr_description"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
-        android:textStyle="italic"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
