--- a/app/src/main/res/layout/qr_scanner.xml
+++ b/app/src/main/res/layout/qr_scanner.xml
@@ -5,21 +5,24 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:visibility="visible"
-    tools:layout_editor_absoluteY="25dp">
+    android:visibility="visible">
 
     <ImageView
         android:id="@+id/format"
-        android:layout_width="408dp"
-        android:layout_height="757dp"
+        android:layout_width="417dp"
+        android:layout_height="626dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/white"
         android:contentDescription="@string/welcome"
         android:src="@drawable/dashboard_format"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.214"
+        app:layout_constraintStart_toStartOf="@+id/camerapreview"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/welcome"
@@ -39,24 +42,25 @@
 
     <SurfaceView
         android:id="@+id/camerapreview"
-        android:layout_width="match_parent"
+        android:layout_width="409dp"
         android:layout_height="300dp"
         android:layout_centerInParent="true"
 
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/description"
-        app:layout_constraintTop_toBottomOf="@+id/welcome"
-        app:layout_constraintVertical_bias="0.843"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/welcome" />
 
     <TextView
         android:id="@+id/description"
-        android:layout_width="0dp"
+        android:layout_width="403dp"
         android:layout_height="38dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:baselineAligned="false"
         android:fontFamily="@font/roboto_condensed_light_italic"
         android:text="@string/qr_description"
@@ -64,12 +68,9 @@
         android:textAllCaps="false"
         android:textColor="@android:color/black"
         android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcome"
-        app:layout_constraintVertical_bias="0.829" />
+        app:layout_constraintTop_toBottomOf="@+id/camerapreview" />
 
     <Button
         android:id="@+id/signedIn"
